--- a/index.html
+++ b/index.html
@@ -643,16 +643,32 @@
                                 }}>
                                   {currentPageData.isIntro ? introLabels[index] : peelLabels[index]}
                                 </div>
-                                {isCorrectPlacement(item, para.id, index) === true && (
-                                  <div style={{ color: '#28a745' }}>
-                                    <CheckCircle size={isMobile ? 20 : 24} />
+                                <div style={{ display: 'flex', alignItems: 'center', gap: '6px' }}>
+                                  <div style={{
+                                    background: item.color,
+                                    color: '#fff',
+                                    borderRadius: '50%',
+                                    width: '24px',
+                                    height: '24px',
+                                    display: 'flex',
+                                    alignItems: 'center',
+                                    justifyContent: 'center',
+                                    fontWeight: 'bold',
+                                    fontSize: '11px'
+                                  }}>
+                                    {currentPageData.dragOptions.findIndex(opt => opt.id === item.id) + 1}
                                   </div>
-                                )}
-                                {isCorrectPlacement(item, para.id, index) === false && (
-                                  <div style={{ color: '#dc3545' }}>
-                                    <XCircle size={isMobile ? 20 : 24} />
-                                  </div>
-                                )}
+                                  {isCorrectPlacement(item, para.id, index) === true && (
+                                    <div style={{ color: '#28a745' }}>
+                                      <CheckCircle size={isMobile ? 20 : 24} />
+                                    </div>
+                                  )}
+                                  {isCorrectPlacement(item, para.id, index) === false && (
+                                    <div style={{ color: '#dc3545' }}>
+                                      <XCircle size={isMobile ? 20 : 24} />
+                                    </div>
+                                  )}
+                                </div>
                               </div>
                               <div style={{ 
                                 fontSize: isMobile ? '12px' : '13px', 
@@ -841,11 +857,29 @@
                               marginBottom: '10px',
                               cursor: 'grab',
                               transition: 'all 0.2s',
-                              minHeight: '48px'
+                              minHeight: '48px',
+                              position: 'relative'
                             }}
                             onMouseDown={(e) => e.currentTarget.style.cursor = 'grabbing'}
                             onMouseUp={(e) => e.currentTarget.style.cursor = 'grab'}
                           >
+                            <div style={{
+                              position: 'absolute',
+                              top: '8px',
+                              right: '8px',
+                              background: option.color,
+                              color: '#fff',
+                              borderRadius: '50%',
+                              width: '32px',
+                              height: '32px',
+                              display: 'flex',
+                              alignItems: 'center',
+                              justifyContent: 'center',
+                              fontWeight: 'bold',
+                              fontSize: '14px'
+                            }}>
+                              {idx + 1}
+                            </div>
                             <div style={{ 
                               display: 'flex', 
                               alignItems: 'center',
@@ -853,7 +887,7 @@
                             }}>
                               <GripVertical />
                             </div>
-                            <div style={{ fontSize: '13px', color: '#333', lineHeight: '1.4' }}>
+                            <div style={{ fontSize: '13px', color: '#333', lineHeight: '1.4', paddingRight: '40px' }}>
                               {option.text}
                             </div>
                           </div>
